# bonuschef

./: .dockerignore  .gitignore  CHANGELOG.md  Dockerfile  Makefile  README.md  dagster.yaml  docker-compose.yml  main.py  noxfile.py  pyproject.toml  python_hash.py
.github/workflows/: ci.yml  release.yml
k8s/: configmap.yaml  dagster-daemon-deployment.yaml  dagster-home-pvc.yaml  dagster-webserver-deployment.yaml  dagster-webserver-service.yaml  namespace.yaml  postgres-deployment.yaml  postgres-pvc.yaml  postgres-service.yaml  secret.yaml  streamlit-deployment.yaml  streamlit-service.yaml
src/: list_commits_github.py
src/bonuschef/: config.py
src/bonuschef/dags/: assets.py  constants.py  definitions.py  supermarket_pipeline.py
src/bonuschef/dags/defs/assets/: __init__.py  all_assets.py
src/bonuschef/dags/defs/assets/dbt/: __init__.py  dbt_project.py
src/bonuschef/dags/defs/assets/dlt/: __init__.py
src/bonuschef/dags/defs/assets/dlt/ah/: __init__.py
src/bonuschef/dags/defs/assets/dlt/github/: __init__.py
src/bonuschef/dags/defs/assets/dlt/github_backfill/: __init__.py  list_github_shas.py
src/bonuschef/dags/defs/assets/dlt/supermarket_products/: __init__.py
src/bonuschef/dags/defs/jobs/: __init__.py
src/bonuschef/dags/defs/resources/: __init__.py  configured_resources.py  dbt.py
src/bonuschef/dags/defs/schedules/: __init__.py
src/bonuschef/dags/defs/sensors/: __init__.py
src/bonuschef/dags/defs/utils/: github_commit_helper.py  list_github_shas.py
src/bonuschef/ingestion/: rest_api_pipeline.py
src/bonuschef/orchestration/: assets.py  definitions.py  supermarket_pipeline.py
src/bonuschef/orchestration/defs/: assets.py  resources.py
src/bonuschef/portal/: analysis_page.py  app.py  db.py  recipe_builder.py  recipes_page.py  ui.py
src/bonuschef/sql/: dbt_project.yml  profiles.yml
src/bonuschef/sql/macros/: seed_default_recipes.sql
src/bonuschef/sql/models/marts/inventory/: _inventory_models.yml  dim_product.sql  fct_bonus_price_comparison.sql  fct_product_price_changes.sql  fct_products.sql
src/bonuschef/sql/models/marts/recipes/: _recipes_models.yml  dim_recipe.sql  fct_recipe_cost_breakdown.sql  fct_recipe_cost_breakdown_bonus.sql  fct_recipe_cost_history.sql  fct_recipe_cost_latest.sql
src/bonuschef/sql/models/staging/ah/: _ah__properties.yml  _ah__sources.yml  stg_ah__bonus_products.sql
src/bonuschef/sql/models/staging/github/: _github__properties.yml  _github__sources.yml  stg_github__products.sql  stg_github__products_ah.sql
src/bonuschef/sql/models/staging/portal/: _portal__properties.yml  _portal__sources.yml  stg_portal__product_images.sql  stg_portal__recipe_ingredients.sql  stg_portal__recipes.sql
src/bonuschef/sql/models/staging/seeds/: _seeds__properties.yml  stg_seeds__recipe_ingredients.sql  stg_seeds__recipes.sql
src/bonuschef/sql/seeds/: recipe_ingredients.csv  recipes.csv
src/bonuschef/utils/: utils.py
tests/unit/: test_config.py  test_utils.py
