[project]
name = "recipechecker"
requires-python = ">=3.12"
version = "0.1.0"

dependencies = [
    "dagster>=1.11.11",
    "dagster-dg-cli>=1.11.11",
    "dagster-webserver>=1.11.11",
    "dlt[workspace]>=1.16.0",
    "dotenv>=0.9.9",
    "duckdb>=1.3.2",
    "marimo>=0.15.3",
    "nox>=2025.5.1",
    "pendulum>=3.1.0",
    "pytest>=8.4.2",
    "pytest-cov>=7.0.0",
]

description = "Add your description here"
readme = "README.md"

[dependency-groups]
dev = [
    "dagster-webserver",
    "dagster-dg-cli",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
force-include = { "pyproject.toml" = "pyproject.toml" }

[tool.dg]
directory_type = "project"

[tool.dg.project]
root_module = "bonuschef"
registry_modules = [
    "bonuschef.components.*",
]
