[project]
name = "bonuschef"
requires-python = ">=3.12"
version = "0.1.0"

dependencies = [
    "dagster>=1.11.11",
    "dagster-dbt>=0.27.11",
    "dagster-dg-cli>=1.11.11",
    "dagster-dlt>=0.27.11",
    "dagster-webserver>=1.11.11",
    "dbt-core>=1.10.13",
    "dbt-postgres>=1.9.1",
    "dlt[postgres,workspace]>=1.16.0",
    "dotenv>=0.9.9",
    "nox>=2025.5.1",
    "pytest>=8.4.2",
    "pytest-cov>=7.0.0",
]

description = "Add your description here"
readme = "README.md"

[dependency-groups]
dev = [
    "dagster-webserver",
    "dagster-dg-cli",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
force-include = { "pyproject.toml" = "pyproject.toml" }

[tool.dg]
directory_type = "project"

[tool.dg.project]
root_module = "bonuschef.dags"
registry_modules = [
    "dags.components.*",
]
