[project]
name = "bonuschef"
requires-python = ">=3.12"
version = "1.1.0"

dependencies = [
    "dagster>=1.11.11",
    "dagster-dbt>=0.27.11",
    "dagster-dg-cli>=1.11.11",
    "dagster-dlt>=0.27.11",
    "dagster-webserver>=1.11.11",
    "dbt-core>=1.10.13",
    "dbt-postgres>=1.9.1",
    "dotenv>=0.9.9",
    "nox>=2025.5.1",
    "pytest>=8.4.2",
    "pytest-cov>=7.0.0",
    "streamlit>=1.50.0",
    "supermarktconnector>=0.8.1",
]

description = "Add your description here"
readme = "README.md"

[dependency-groups]
dev = [
    "pytest>=8.4.2, <8.4.3",
    "ruff>=0.13.1, <0.13.2",
    "sqlfluff>=3.4.2, <3.4.3"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
force-include = { "pyproject.toml" = "pyproject.toml" }

[tool.dg]
directory_type = "project"

[tool.dg.project]
root_module = "bonuschef.dags"
registry_modules = [
    "bonuschef.dags.components.*",
]

[tool.dagster]
module_name = "bonuschef.dags.definitions"

[tool.semantic_release]
version_toml = ["pyproject.toml:project.version"]
commit_parser = "conventional"

[tool.semantic_release.branches.main]
match = "main"

[tool.semantic_release.remote]
type = "github"
token = { env = "GH_TOKEN" }

[tool.semantic_release.changelog.default_templates]
changelog_file = "CHANGELOG.md"

